--- a/inter_rater_reliability.qmd
+++ b/inter_rater_reliability.qmd
@@ -121,9 +121,12 @@ agg.data.inspection2<-agg.data2 %>%
 
 #manipulation check
 man.check.datafr<-data.frame(man.check.data$Subject,man.check.data$Value, man.check.data2$Subject, man.check.data2$Value)
+#reorder so that subjects match  
+man.check.datafr.rearranged1<-man.check.datafr[order(man.check.datafr$man.check.data.Subject),1:2]
+man.check.datafr.rearranged2<-man.check.datafr[order(man.check.datafr$man.check.data2.Subject),3:4]
+man.check.datafr.rearranged<-cbind(man.check.datafr.rearranged1, man.check.datafr.rearranged2)
 
 #duration looking 
-
 dur.looking<-data.frame(agg.data.dur.transp1$Subject, agg.data.dur.transp1$sum_duration, agg.data.dur.transp2$sum_duration, agg.data.dur.opaque1$Subject, agg.data.dur.opaque1$sum_duration, agg.data.dur.opaque2$sum_duration)
 
 #first choice
@@ -134,29 +137,45 @@ first.choices<-data.frame(agg.data.first.choice1, agg.data.first.choice2$Value)
 
 
 ```{r}
-#Agreement on Latency: continuous variable, two-way random effects model, single rater, consistency (not interested in absolute values)
+#Agreement on duration looking transparent: continuous variable, two-way random effects model, single rater, consistency (not interested in absolute values)
 #ICC=Interclass correlation coefficient
 
 icc(
-  latencies, model = "twoway", 
+  dur.looking[,c(2:3)], model = "twoway", 
+  type = "consistency", unit = "single"
+  )
+
+#Agreement on duration looking opaque: continuous variable, two-way random effects model, single rater, consistency (not interested in absolute values)
+#ICC=Interclass correlation coefficient
+
+icc(
+  dur.looking[,c(5:6)], model = "twoway", 
   type = "consistency", unit = "single"
   )
 
 #But this assumes every obs is a subject
 
-shapiro.test(agg.data.latency1$sum_duration)
-shapiro.test(agg.data.latency2$sum_duration2) #neither is normally distributed
+shapiro.test(dur.looking[,2])
+shapiro.test(dur.looking[,3]) #neither is normally distributed
 
 #Spearman
-cor.test(agg.data.latency1$sum_duration, agg.data.latency2$sum_duration2, method= "spearman", use="complete.obs")
-length(agg.data.latency1$sum_duration)
+cor.test(dur.looking[,2], dur.looking[,3], method= "spearman", use="complete.obs")
+length(dur.looking[,2])
 ```
 
 ```{r}
 #Agreement on first choice
 #Cohen's Kappa
 
-first_choices<-data.frame(agg.data.first.choice1$Value, agg.data.first.choice2$Value)
+#already done above? Line 134?
+#first_choices<-data.frame(agg.data.first.choice1$Value, agg.data.first.choice2$Value)
 
 kappa2(first_choices)
 ```
+
+```{r}
+#Agreement on manipulation check
+#Cohen's Kappa
+kappa2(man.check.datafr.rearranged[,c(2,4)])
+```
+
